set(ASN1RELDIR r10.5)
include_directories(${SRC_TOP_DIR}/oai_sgw/common)
include_directories(${SRC_TOP_DIR}/oai_sgw/common/itti)
include_directories(${CMAKE_BINARY_DIR}/s1ap/${ASN1RELDIR})
include_directories(${SRC_TOP_DIR}/oai_sgw/utils)
include_directories(${SRC_TOP_DIR}/oai_sgw/utils/bstr)
include_directories(${SRC_TOP_DIR}/oai_sgw/utils/hashtable)
include_directories(${SRC_TOP_DIR}/oai_sgw/utils/msc)

# TODO (amar) fix include leak
include_directories("${SRC_TOP_DIR}/nas")
include_directories("${SRC_TOP_DIR}/nas/emm")
include_directories("${SRC_TOP_DIR}/nas/emm/msg")
include_directories("${SRC_TOP_DIR}/nas/emm/sap")
include_directories("${SRC_TOP_DIR}/nas/ies")
include_directories("${SRC_TOP_DIR}/nas/util")
include_directories("${SRC_TOP_DIR}/nas/esm")
include_directories("${SRC_TOP_DIR}/nas/esm/msg")
include_directories("${SRC_TOP_DIR}/nas/api/network")
include_directories("${SRC_TOP_DIR}/nas/api/mme")
include_directories("${SRC_TOP_DIR}/mme_app")

add_library(UDP_SERVER udp_primitives_server.c)
